# GPU-SG-SNE

./: .gitmodules  README.md
code/: a.out  blockToeplitz.m  checkcirc.m  d2pSparce.m  d2pSparce.m~  flt2d.cpp  fltsne1D.m  fltsne1D.m~  fltsne2D.m  fltsne2D.m~  fltsne2Dimproved.m  fltsne2Dimproved.m~  fltsne3D.m  interpolate.m  interpolate.m~  kernel.cpp  preproccessing.m  repulsive.m  svd_ac.m  tsneError.m  tsne_computeAprox.m  tsnenew.m  untitled.m  untitled.m~  untitled2.m  untitled2.m~
code/complete_matlab/: aproxGradient.m  attractiveSparse.m  back.m  compute1D.m  compute1D.m~  compute2D.m  compute3D.m  compute4D.m  d2pSparse.m  d2pSparse.m~  d2pbeta.m  demo.m  exactGradient.m  filename.txt  gradFft3D.m  graphError.m  graphError.m~  kernel.m  matlab.mat  preproccessing.m  repulsive.m  repulsive.m~  t_dist.m  testComp.m  testComp.m~  testRep.m  trainX.mat  tsne.m  tsneError.m  tsne_compute.m  tsne_compute.m~  tsne_computeAprox.m  tsne_p.m  tsnenew.m  tsnenew.m~  tsnenewSparse.m  tsnenewSparse.m~
code/cuda/: AttractiveForces.cu  PhiGrid_cpu.txt  PhiGrid_gpu.txt  TODO.txt  VGrid_gpu.txt  a.out  common.h  cpuEmbedding.txt  embedding.txt  gpuEmbedding.txt  idx.c  last.txt  main.cu  nuconv.cu  out1.txt  out2.txt  out3.txt  perm.txt  repForces.cu  rest  rest.cu  test.cu
code/cuda/3D/: g2s3D10.txt  g2s3D100.txt  g2s3D150.txt  g2s3D75.txt  s2g3D10.txt  s2g3D100.txt  s2g3D150.txt  s2g3D75.txt
code/cuda/SG-tSNE-CUDA/: CMakeLists.txt
code/cuda/SG-tSNE-CUDA/src/: .gradient_descendStreams.cu.swp  .griddingStreams.cu.swo  .griddingStreams.cu.swp  .non_periodic_convFStreams.cu.swp  .nuconvStreams.cu.swm  .nuconvStreams.cu.swn  .nuconvStreams.cu.swo  .nuconvStreams.cu.swp  .utils.cu.swp  Frep.cpp  Frep.cu  Frep.cuh  Frep.hpp  FrepNoReloc.cu  FrepNoRelocStreams.cu  Frep_varGrid.cu  Makefile  allknn.cuh  bsr_pq.cuh  common.cuh  complexD.cuh  compute_error.cu  convolution_nopadding_helper.cpp  example_read.cu  gradient_descend.cu  gradient_descend.cuh  gradient_descend.hpp  gradient_descendCPU.cpp  gradient_descendStreams.cu  gradient_descend_varGrid.cu  graph_rescaling.cpp  graph_rescaling.cu  graph_rescaling.cuh  graph_rescaling.hpp  graph_rescaling0.cu  grid_test0.cu  gridding.cpp  gridding.cu  gridding.cuh  gridding0.cu  (+59 more)
code/cuda/SG-tSNE-CUDA/src/testing_modules/: .demo_perplexity2.cu.swp  a.out  demo_perplexity.cu  demo_perplexity0.cu  demo_perplexity1.cu  demo_perplexity2.cu  demo_stochastic_matrix.cu  ex.sh  fft_test.cu  g2s_test.cu  grid_test0.cu  kl_test.cu  pq_test.cu  relocation_test0.cu  s2g_test.cu  sg_test.cu  sg_test0.cu  symmetrize_testing.cu  testBSRpq.cu  testPaddedBSR.cu  test_graph_rescaling.cu  test_symmetrize.cu  testcsr2bsr.cu  total_test.cu  tstpq.cu  tstspmv.cu
code/cuda/SG-tSNE-HYB/sgtsnepi/: CMakeLists.txt
code/cuda/SG-tSNE-HYB/sgtsnepi/src/: .nuconv.cpp.swp  dataReloc.cpp  demo_perplexity_equalization.cpp  gradient_descendHYB.cpp  gridding.cpp  non_periodic_conv.cpp  nuconv.cpp  nuconv.hpp  qq.cpp  sgtsne.cpp  utils.cpp  utils.hpp
code/cuda/SG-tSNE-HYB/sgtsnepi/src/cuda/: Frep.cu  Frep.cuh  common.cuh  complexD.cuh  complexF.cuh  gpu_timer.h  gridding.cu  gridding.cuh  gridding1.cuh  griddingStreams.cu  non_periodic_convD.cu  non_periodic_convD.cuh  non_periodic_convDStreams.cu  non_periodic_convF.cu  non_periodic_convF.cuh  non_periodic_convFStreams.cu  nuconv.cu  nuconv.cuh  nuconvStreams.cu  utils_cuda.cuh
code/cuda/complete_cuda/: Frep.cpp  Frep.cu  Frep.cuh  Frep.hpp  Makefile  common.cuh  common.hpp  complex.cuh  convolution_nopadding_helper.cpp  critical.cu  devptr.cu  gradient_descend.cu  gradient_descend.cuh  gradient_descend.hpp  gradient_descendCPU.cpp  grid_test.cu  grid_test0.cu  gridding.cpp  gridding.cu  gridding.cuh  gridding.hpp  gridding0.cu  gridding1.cu  hope  loadData.cu  main.cu  non_periodic_conv.cpp  non_periodic_conv.cu  non_periodic_conv.cuh  non_periodic_conv.hpp  nuconv.cpp  nuconv.cu  nuconv.cuh  nuconv.hpp  pq.cu  radix.cu  relRand2d.txt  relocRand3d.txt  relocateData.cpp  relocateData.cu  (+16 more)
code/cuda/copy/: Frep.cpp  Frep.cu  Frep.cuh  Makefile  common.hpp  csrsmv.cu  gradient_descend.cuh  gradient_descend.hpp  gradient_descendCPU.cpp  gridding.cpp  gridding.cu  gridding.hpp  main.cuh  non_periodic_conv.cpp  non_periodic_conv.cu  non_periodic_conv.cuh  non_periodic_conv.hpp  nuconv.cpp  nuconv.cu  nuconv.cuh  nuconv.hpp  pq.cpp  relocateData.cpp  relocateData.cu  testbro.cu  timers.hpp  tsne.cu  tsne.cuh  types.hpp  utils.cu
code/cuda/cuSolver/: alter.cpp  cuSolverSp_LinearSolver.cpp
code/cuda/cudastreams/: streams.cu
code/cuda/data/: disection.txt  original.txt
code/cuda/haha/: papa.py  script.sh
code/cuda/metis_test/: metis_test.cpp
code/cuda/mex_ex/: mexex.cu
code/cuda/papa/: Makefile  common.cpp  gradient_descend.hpp  main.cu  timers.cpp  tsne.cu  tsne.cuh  utils.cpp  utils.hpp
code/cuda/src/: Frep.cpp  Frep.cu  Frep.cuh  Frep.hpp  FrepNoReloc.cu  bsr_pq.cuh  common.cuh  common.hpp  complexD.cuh  convolution_nopadding_helper.cpp  cuComplex.h  cudaSparseLinearSolvers.h  example_read.cu  gradient_descend.cu  gradient_descend.cuh  gradient_descend.hpp  gradient_descendCPU.cpp  graph_rescaling.cpp  graph_rescaling.cu  gridding.cu  gridding.cuh  gridding.hpp  gridding0.cuh  gridding_test.cu  hybrid.cuh  hybridpq.cu  matrix_converter.cpp  mmio.c  mmio.h  non_periodic_conv.cpp  non_periodic_conv.hpp  non_periodic_convD.cu  non_periodic_convD.cuh  non_periodic_convF.cu  non_periodic_convF.cuh  nuconv.cpp  nuconv.cu  nuconv.cuh  pq.cu  pq.cuh  (+30 more)
code/cuda/tests/: ff1D.txt  ff1Dg.txt  ff2D.txt  ff2Dg.txt  ff3D.txt  ff3Dg.txt  fft1D.txt  fft1Dg.txt  fft2D.txt  fft2Dg.txt  fft3D.txt  (+92 more)
code/matlab/: dim2.m  fc.m  fftmult2.m  flt2Dimproved.m  flt2d.cpp  fltsne2D.m  interpolationMethod.m  kerneleval1.m  kerneleval2.m  test1d.m  test2d.m  toeplitz_mvp.m
graphs_experiments/: a.out  blockToeplitz.m  dim2.m~  flt2d.cpp  fltsne1D.m  fltsne2D.m  fltsne2D.m~  fltsne2Dimproved.m  interpolate_eval.m  interpolationMethod.m  kernel.cpp  mult2.m  mult2d.m  untitled.m  untitled.m~  untitled4.m
graphs_experiments/tbbt/: BT_fft.m
(+149 files in other folders)
